# controlbot_ros2_control

./: README.md
controlbot_1_description/: package.xml  setup.cfg  setup.py
controlbot_1_description/launch/: display.launch.py  gazebo.launch.py  gazebo_sim.launch.py
controlbot_1_description/meshes/: base_link.stl  (+2 more)
controlbot_1_imu_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
controlbot_1_imu_description/launch/: display.launch.py  gazebo.launch.py  gz_sim.launch.py
controlbot_1_imu_description/meshes/: base_link.stl  imu_link_1.stl  wheel_left_link_1.stl  wheel_right_link_1.stl
controlbot_1_imu_description/urdf/: controlbot_1_imu.gazebo  controlbot_1_imu.trans  controlbot_1_imu.xacro  controlbot_ros2_control.xacro  materials.xacro  ros2_control.xacro
controlbot_bringup/: CMakeLists.txt  package.xml
controlbot_controller/: CMakeLists.txt  package.xml
controlbot_controllers/: CMakeLists.txt  package.xml
controlbot_cpp/: CMakeLists.txt  package.xml
controlbot_firmware/: CMakeLists.txt  controlbot_interface.xml  package.xml
controlbot_localisation/: CMakeLists.txt  package.xml
controlbot_localization/: CMakeLists.txt  package.xml
controlbot_mapping/: CMakeLists.txt  package.xml
controlbot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
controlbot_msgs/: CMakeLists.txt  package.xml
controlbot_navigation/: CMakeLists.txt  package.xml
controlbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
controlbot_py/: package.xml  setup.cfg  setup.py
controlbot_utils/: CMakeLists.txt  package.xml
(+76 files in other folders)
